Move back to single byte array path to reduce allocation in other operations.